output_10.1.168/quda_define.h.in.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/10.1.168'
In file included from <built-in>:1:
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:66:2: error: "Unsupported CUDA version!"
#error "Unsupported CUDA version!"
 ^
/tmp/quda_define.h.in-d30699.hip:21:2: error: invalid preprocessing directive
#cmakedefine QUDA_TEX
 ^
/tmp/quda_define.h.in-d30699.hip:32:2: error: invalid preprocessing directive
#cmakedefine QUDA_DYNAMIC_CLOVER
 ^
3 errors generated when compiling for host.
Error while processing /tmp/quda_define.h.in-d30699.hip.

[HIPIFY] info: file './quda/include/quda_define.h.in' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 0
  UNCONVERTED refs count: 0
  CONVERSION %: 0
  REPLACED bytes: 0
  TOTAL bytes: 1001
  CHANGED lines of code: 1
  TOTAL lines of code: 41
  CODE CHANGED (in bytes) %: 0
  CODE CHANGED (in lines) %: 2
  TIME ELAPSED s: 0.18
